# freesasa-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  1hh3.pdb1  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.dev  FreeSASA_test  Makefile  README.md  TODO.md  build.rs  cmake_install.cmake  license  main.cxx  process_dot.py  rust_sasa.code-workspace  rustfmt.toml
.devcontainer/: devcontainer.json
benches/: my_benchmark.rs
data/: 3b7y.cif  3b7y_B_sasa.json  3b7y_B_sasa_diffs.json  3b7y_matt_sasa.json  README.md
include/: wrapper.h
scripts/: install_libs.sh
src/: classifier.rs  error.rs  freesasa_ffi.rs  fs_ffi.rs  lib.rs  node.rs  result.rs  rust_sasa.code-workspace  selection.rs  structure.rs  test.rs  uids.rs
src/result/: mod.rs  node.rs  result_.rs  tree.rs
src/result/node/: mod.rs  node_.rs  properties.rs
src/utils/: macros.rs  mod.rs
