[package]
name = "freesasa-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
pdbtbx = { git = "https://github.com/douweschulte/pdbtbx" }
freesasa-sys = "0.1"
serde = { version = "1.0", features = ["derive"] }
petgraph = { version = "0.6.3", features = ["serde-1"] }
serde_json = "1.0"
serde_with = "2.3.2"

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[features]
unsafe-ops = []
